--- a/new_data.ipynb
+++ b/new_data.ipynb
@@ -953,419 +953,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "33856e82",
+   "execution_count": 246,
+   "id": "827e3ac7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_royk = pd.read_excel('røykere99_08.xlsx')"
+    "df_royk = pd.read_excel('røykerer_no.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "id": "a609b2fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>05307: Dagligrøykere og av-og-til-røykere (16-79 år), etter kjønn, alder, statistikkvariabel og år</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>Unnamed: 9</th>\n",
-       "      <th>Unnamed: 10</th>\n",
-       "      <th>Unnamed: 11</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Antall respondenter</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2001.0</td>\n",
-       "      <td>2002.0</td>\n",
-       "      <td>2003.0</td>\n",
-       "      <td>2004.0</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Begge kjønn</td>\n",
-       "      <td>I alt</td>\n",
-       "      <td>5104</td>\n",
-       "      <td>5208.0</td>\n",
-       "      <td>5216.0</td>\n",
-       "      <td>5485.0</td>\n",
-       "      <td>5288.0</td>\n",
-       "      <td>5243.0</td>\n",
-       "      <td>5225.0</td>\n",
-       "      <td>4968.0</td>\n",
-       "      <td>4997.0</td>\n",
-       "      <td>4637.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>I 2024 ble for første gang undersøkelsen gjenn...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Treårig glidende gjennomsnitt fram til 1991. F...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Sist endret:</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Antall respondenter:</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>20241118 08:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Kilde:</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Statistisk sentralbyrå</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   05307: Dagligrøykere og av-og-til-røykere (16-79 år), etter kjønn, alder, statistikkvariabel og år  \\\n",
-       "0                                                 NaN                                                   \n",
-       "1                                                 NaN                                                   \n",
-       "2                                                 NaN                                                   \n",
-       "3                                         Begge kjønn                                                   \n",
-       "4                                                 NaN                                                   \n",
-       "5   I 2024 ble for første gang undersøkelsen gjenn...                                                   \n",
-       "6   Treårig glidende gjennomsnitt fram til 1991. F...                                                   \n",
-       "7                                                 NaN                                                   \n",
-       "8                                        Sist endret:                                                   \n",
-       "9                                Antall respondenter:                                                   \n",
-       "10                                     20241118 08:00                                                   \n",
-       "11                                                NaN                                                   \n",
-       "12                                             Kilde:                                                   \n",
-       "13                             Statistisk sentralbyrå                                                   \n",
-       "14                                                NaN                                                   \n",
-       "\n",
-       "   Unnamed: 1           Unnamed: 2  Unnamed: 3  Unnamed: 4  Unnamed: 5  \\\n",
-       "0         NaN                  NaN         NaN         NaN         NaN   \n",
-       "1         NaN  Antall respondenter         NaN         NaN         NaN   \n",
-       "2         NaN                 1999      2000.0      2001.0      2002.0   \n",
-       "3       I alt                 5104      5208.0      5216.0      5485.0   \n",
-       "4         NaN                  NaN         NaN         NaN         NaN   \n",
-       "5         NaN                  NaN         NaN         NaN         NaN   \n",
-       "6         NaN                  NaN         NaN         NaN         NaN   \n",
-       "7         NaN                  NaN         NaN         NaN         NaN   \n",
-       "8         NaN                  NaN         NaN         NaN         NaN   \n",
-       "9         NaN                  NaN         NaN         NaN         NaN   \n",
-       "10        NaN                  NaN         NaN         NaN         NaN   \n",
-       "11        NaN                  NaN         NaN         NaN         NaN   \n",
-       "12        NaN                  NaN         NaN         NaN         NaN   \n",
-       "13        NaN                  NaN         NaN         NaN         NaN   \n",
-       "14        NaN                  NaN         NaN         NaN         NaN   \n",
-       "\n",
-       "    Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  Unnamed: 10  Unnamed: 11  \n",
-       "0          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "1          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "2       2003.0      2004.0      2005.0      2006.0       2007.0       2008.0  \n",
-       "3       5288.0      5243.0      5225.0      4968.0       4997.0       4637.0  \n",
-       "4          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "5          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "6          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "7          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "8          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "9          NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "10         NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "11         NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "12         NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "13         NaN         NaN         NaN         NaN          NaN          NaN  \n",
-       "14         NaN         NaN         NaN         NaN          NaN          NaN  "
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_royk.head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "id": "37e492da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>1999</th>\n",
-       "      <th>2000.0</th>\n",
-       "      <th>2001.0</th>\n",
-       "      <th>2002.0</th>\n",
-       "      <th>2003.0</th>\n",
-       "      <th>2004.0</th>\n",
-       "      <th>2005.0</th>\n",
-       "      <th>2006.0</th>\n",
-       "      <th>2007.0</th>\n",
-       "      <th>2008.0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I alt</td>\n",
-       "      <td>5104</td>\n",
-       "      <td>5208.0</td>\n",
-       "      <td>5216.0</td>\n",
-       "      <td>5485.0</td>\n",
-       "      <td>5288.0</td>\n",
-       "      <td>5243.0</td>\n",
-       "      <td>5225.0</td>\n",
-       "      <td>4968.0</td>\n",
-       "      <td>4997.0</td>\n",
-       "      <td>4637.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Unnamed: 1  1999  2000.0  2001.0  2002.0  2003.0  2004.0  2005.0  2006.0  \\\n",
-       "0      I alt  5104  5208.0  5216.0  5485.0  5288.0  5243.0  5225.0  4968.0   \n",
-       "\n",
-       "   2007.0  2008.0  \n",
-       "0  4997.0  4637.0  "
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_royk_clean = df_royk.iloc[2:].copy()\n",
     "# First, select only the columns we want (column 2 onwards - age groups + year data)\n",
@@ -1381,7 +982,8 @@
     "df_royk_filtered = df_royk_clean.iloc[[0]].copy()\n",
     "df_royk_filtered.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "df_royk_filtered.head()\n"
+    "df_royk_filtered.head()\n",
+    "df_den_filtered.to_excel('røykere_filtered_no.xlsx', index=False)"
    ]
   },
   {
