--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "592825e8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "de59f66b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "id": "627dd602",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "id": "98aee16e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "id": "78c91b35",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "78502974",
    "metadata": {},
    "outputs": [
@@ -222,8 +222,8 @@
       "Dep. Variable:                  Cases   R-squared:                       0.309\n",
       "Model:                            OLS   Adj. R-squared:                  0.180\n",
       "Method:                 Least Squares   F-statistic:                     2.387\n",
-      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):              0.107\n",
-      "Time:                        12:46:56   Log-Likelihood:                -165.24\n",
+      "Date:                Thu, 09 Oct 2025   Prob (F-statistic):              0.107\n",
+      "Time:                        09:49:47   Log-Likelihood:                -165.24\n",
       "No. Observations:                  20   AIC:                             338.5\n",
       "Df Residuals:                      16   BIC:                             342.5\n",
       "Df Model:                           3                                         \n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "ab5fabf7",
    "metadata": {},
    "outputs": [
@@ -333,16 +333,21 @@
      "output_type": "stream",
      "text": [
       "Norway smoking summed data:\n",
-      "1999    5104\n",
-      "2000    5208\n",
-      "2001    5216\n",
-      "2002    5485\n",
-      "2003    5288\n",
-      "2004    5243\n",
-      "2005    5225\n",
-      "2006    4968\n",
-      "2007    4997\n",
-      "2008    4637\n",
+      "1991    16788\n",
+      "1992    16664\n",
+      "1993    17972\n",
+      "1994    15792\n",
+      "1995    17555\n",
+      "1996    16716\n",
+      "1997    16675\n",
+      "1998    16221\n",
+      "1999    16490\n",
+      "2000    15229\n",
+      "2001    17049\n",
+      "2002    14980\n",
+      "2003    16437\n",
+      "2004    15316\n",
+      "2005    16398\n",
       "dtype: int64\n",
       "\n",
       "Denmark smoking summed data:\n",
@@ -359,82 +364,39 @@
       "dtype: int64\n",
       "\n",
       "Combined smoking data:\n",
-      "   Country  1999  2000  2001  2002  2003  2004  2005  2006  2007  2008\n",
-      "0  Denmark  2149  2231  1690  1732  1608  1325  1122  1032   908   849\n",
-      "1   Norway  5104  5208  5216  5485  5288  5243  5225  4968  4997  4637\n",
+      "   Country   1999   2000   2001   2002   2003   2004   2005\n",
+      "0  Denmark   2149   2231   1690   1732   1608   1325   1122\n",
+      "1   Norway  16490  15229  17049  14980  16437  15316  16398\n",
       "\n",
       "Smoking data in long format:\n",
       "   Country  Year  Smokers\n",
       "0  Denmark  1999     2149\n",
-      "1   Norway  1999     5104\n",
+      "1   Norway  1999    16490\n",
       "2  Denmark  2000     2231\n",
-      "3   Norway  2000     5208\n",
+      "3   Norway  2000    15229\n",
       "4  Denmark  2001     1690\n",
-      "5   Norway  2001     5216\n",
+      "5   Norway  2001    17049\n",
       "6  Denmark  2002     1732\n",
-      "7   Norway  2002     5485\n",
+      "7   Norway  2002    14980\n",
       "8  Denmark  2003     1608\n",
-      "9   Norway  2003     5288\n",
+      "9   Norway  2003    16437\n",
       "\n",
       "Merged hospital cases and smoking data:\n",
       "    Country  Year  Cases  Post_2004  Norway  Treated  Smokers\n",
       "0   Denmark  1999  16490          0       0        0     2149\n",
-      "1    Norway  1999  18968          0       1        0     5104\n",
+      "1    Norway  1999  18968          0       1        0    16490\n",
       "2   Denmark  2000  15229          0       0        0     2231\n",
-      "3    Norway  2000  16350          0       1        0     5208\n",
+      "3    Norway  2000  16350          0       1        0    15229\n",
       "4   Denmark  2001  17049          0       0        0     1690\n",
-      "5    Norway  2001  18120          0       1        0     5216\n",
+      "5    Norway  2001  18120          0       1        0    17049\n",
       "6   Denmark  2002  14980          0       0        0     1732\n",
-      "7    Norway  2002  16007          0       1        0     5485\n",
+      "7    Norway  2002  16007          0       1        0    14980\n",
       "8   Denmark  2003  16437          0       0        0     1608\n",
-      "9    Norway  2003  16632          0       1        0     5288\n",
+      "9    Norway  2003  16632          0       1        0    16437\n",
       "10  Denmark  2004  15316          1       0        0     1325\n",
-      "11   Norway  2004  16463          1       1        1     5243\n",
+      "11   Norway  2004  16463          1       1        1    15316\n",
       "12  Denmark  2005  16398          1       0        0     1122\n",
-      "13   Norway  2005  17775          1       1        1     5225\n",
-      "14  Denmark  2006  15918          1       0        0     1032\n",
-      "\n",
-      "============================================================\n",
-      "DiD WITH SMOKING CONTROLS\n",
-      "============================================================\n",
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                  Cases   R-squared:                       0.309\n",
-      "Model:                            OLS   Adj. R-squared:                  0.125\n",
-      "Method:                 Least Squares   F-statistic:                     1.679\n",
-      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):              0.207\n",
-      "Time:                        14:28:45   Log-Likelihood:                -165.24\n",
-      "No. Observations:                  20   AIC:                             340.5\n",
-      "Df Residuals:                      15   BIC:                             345.5\n",
-      "Df Model:                           4                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const       1.604e+04   2340.486      6.851      0.000     1.1e+04     2.1e+04\n",
-      "Norway      1175.8190   4166.979      0.282      0.782   -7705.886    1.01e+04\n",
-      "Post_2004   -495.1622   1224.814     -0.404      0.692   -3105.791    2115.467\n",
-      "Treated     -102.2497   1204.082     -0.085      0.933   -2668.690    2464.191\n",
-      "Smokers        0.0008      1.217      0.001      1.000      -2.593       2.594\n",
-      "==============================================================================\n",
-      "Omnibus:                        1.685   Durbin-Watson:                   1.402\n",
-      "Prob(Omnibus):                  0.431   Jarque-Bera (JB):                0.960\n",
-      "Skew:                          -0.070   Prob(JB):                        0.619\n",
-      "Kurtosis:                       1.936   Cond. No.                     7.66e+04\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 7.66e+04. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n",
-      "\n",
-      "============================================================\n",
-      "COMPARISON: WITH vs WITHOUT SMOKING CONTROLS\n",
-      "============================================================\n",
-      "Original DiD estimate: -101.80 (p-value: 0.9149)\n",
-      "Controlled DiD estimate: -102.25 (p-value: 0.9334)\n",
-      "Difference in estimate: -0.45\n",
-      "Smoking coefficient: 0.00\n"
+      "13   Norway  2005  17775          1       1        1    16398\n"
      ]
     }
    ],
@@ -495,6 +457,89 @@
     "X_controlled = df_merged[['Norway', 'Post_2004', 'Treated', 'Smokers']].copy()\n",
     "X_controlled = sm.add_constant(X_controlled)\n",
     "y_controlled = df_merged['Cases']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4794a03e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "DiD WITH SMOKING CONTROLS\n",
+      "============================================================\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Cases   R-squared:                       0.529\n",
+      "Model:                            OLS   Adj. R-squared:                  0.319\n",
+      "Method:                 Least Squares   F-statistic:                     2.525\n",
+      "Date:                Thu, 09 Oct 2025   Prob (F-statistic):              0.114\n",
+      "Time:                        09:49:47   Log-Likelihood:                -112.31\n",
+      "No. Observations:                  14   AIC:                             234.6\n",
+      "Df Residuals:                       9   BIC:                             237.8\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const       1.431e+04    949.509     15.076      0.000    1.22e+04    1.65e+04\n",
+      "Norway     -1.178e+04   6462.600     -1.822      0.102   -2.64e+04    2842.331\n",
+      "Post_2004    422.6978    825.850      0.512      0.621   -1445.506    2290.901\n",
+      "Treated     -354.3512   1109.995     -0.319      0.757   -2865.334    2156.632\n",
+      "Smokers        0.9153      0.455      2.013      0.075      -0.113       1.944\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.480   Durbin-Watson:                   2.278\n",
+      "Prob(Omnibus):                  0.787   Jarque-Bera (JB):                0.556\n",
+      "Skew:                           0.227   Prob(JB):                        0.757\n",
+      "Kurtosis:                       2.135   Cond. No.                     3.02e+05\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 3.02e+05. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "\n",
+      "============================================================\n",
+      "COMPARISON: WITH vs WITHOUT SMOKING CONTROLS\n",
+      "============================================================\n",
+      "Original DiD estimate: -101.80 (p-value: 0.9149)\n",
+      "Controlled DiD estimate: -354.35 (p-value: 0.7568)\n",
+      "Difference in estimate: -252.55\n",
+      "Smoking coefficient: 0.92\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1806: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=14\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_controlled = sm.OLS(y_controlled, X_controlled).fit()\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"DiD WITH SMOKING CONTROLS\")\n",
+    "print(\"=\"*60)\n",
+    "print(model_controlled.summary())\n",
+    "\n",
+    "# Compare results\n",
+    "controlled_did_coefficient = model_controlled.params['Treated']\n",
+    "controlled_pvalue = model_controlled.pvalues['Treated']\n",
+    "\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"COMPARISON: WITH vs WITHOUT SMOKING CONTROLS\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Original DiD estimate: {did_coefficient:.2f} (p-value: {did_pvalue:.4f})\")\n",
+    "print(f\"Controlled DiD estimate: {controlled_did_coefficient:.2f} (p-value: {controlled_pvalue:.4f})\")\n",
+    "print(f\"Difference in estimate: {controlled_did_coefficient - did_coefficient:.2f}\")\n",
+    "print(f\"Smoking coefficient: {model_controlled.params['Smokers']:.2f}\")"
    ]
   }
  ],
