--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "592825e8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "de59f66b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "627dd602",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "98aee16e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "78c91b35",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "78502974",
    "metadata": {},
    "outputs": [
@@ -222,8 +222,8 @@
       "Dep. Variable:                  Cases   R-squared:                       0.309\n",
       "Model:                            OLS   Adj. R-squared:                  0.180\n",
       "Method:                 Least Squares   F-statistic:                     2.387\n",
-      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):              0.107\n",
-      "Time:                        12:46:56   Log-Likelihood:                -165.24\n",
+      "Date:                Tue, 14 Oct 2025   Prob (F-statistic):              0.107\n",
+      "Time:                        20:51:44   Log-Likelihood:                -165.24\n",
       "No. Observations:                  20   AIC:                             338.5\n",
       "Df Residuals:                      16   BIC:                             342.5\n",
       "Df Model:                           3                                         \n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ab5fabf7",
    "metadata": {},
    "outputs": [
@@ -392,49 +392,7 @@
       "11   Norway  2004  16463          1       1        1     5243\n",
       "12  Denmark  2005  16398          1       0        0     1122\n",
       "13   Norway  2005  17775          1       1        1     5225\n",
-      "14  Denmark  2006  15918          1       0        0     1032\n",
-      "\n",
-      "============================================================\n",
-      "DiD WITH SMOKING CONTROLS\n",
-      "============================================================\n",
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                  Cases   R-squared:                       0.309\n",
-      "Model:                            OLS   Adj. R-squared:                  0.125\n",
-      "Method:                 Least Squares   F-statistic:                     1.679\n",
-      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):              0.207\n",
-      "Time:                        14:28:45   Log-Likelihood:                -165.24\n",
-      "No. Observations:                  20   AIC:                             340.5\n",
-      "Df Residuals:                      15   BIC:                             345.5\n",
-      "Df Model:                           4                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const       1.604e+04   2340.486      6.851      0.000     1.1e+04     2.1e+04\n",
-      "Norway      1175.8190   4166.979      0.282      0.782   -7705.886    1.01e+04\n",
-      "Post_2004   -495.1622   1224.814     -0.404      0.692   -3105.791    2115.467\n",
-      "Treated     -102.2497   1204.082     -0.085      0.933   -2668.690    2464.191\n",
-      "Smokers        0.0008      1.217      0.001      1.000      -2.593       2.594\n",
-      "==============================================================================\n",
-      "Omnibus:                        1.685   Durbin-Watson:                   1.402\n",
-      "Prob(Omnibus):                  0.431   Jarque-Bera (JB):                0.960\n",
-      "Skew:                          -0.070   Prob(JB):                        0.619\n",
-      "Kurtosis:                       1.936   Cond. No.                     7.66e+04\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 7.66e+04. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n",
-      "\n",
-      "============================================================\n",
-      "COMPARISON: WITH vs WITHOUT SMOKING CONTROLS\n",
-      "============================================================\n",
-      "Original DiD estimate: -101.80 (p-value: 0.9149)\n",
-      "Controlled DiD estimate: -102.25 (p-value: 0.9334)\n",
-      "Difference in estimate: -0.45\n",
-      "Smoking coefficient: 0.00\n"
+      "14  Denmark  2006  15918          1       0        0     1032\n"
      ]
     }
    ],
