--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "592825e8",
    "metadata": {},
    "outputs": [],
@@ -15,192 +15,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "de59f66b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_den = pd.read_excel('denmark_final.xlsx')\n",
-    "df_no = pd.read_excel('norway_final.xlsx')\n"
+    "df_eng = pd.read_excel('data_washed/england_smokers.xlsx')\n",
+    "df_no = pd.read_excel('data_washed/norway_smokers.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "627dd602",
+   "execution_count": 6,
+   "id": "bab8944b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>year</td>\n",
+       "      <td>All above 16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>14.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>16.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>16.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>15.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>17.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>18.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>19.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>19.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>19.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1999    16490\n",
-       "2000    15229\n",
-       "2001    17049\n",
-       "2002    14980\n",
-       "2003    16437\n",
-       "2004    15316\n",
-       "2005    16398\n",
-       "2006    15918\n",
-       "2007    16285\n",
-       "2008    13789\n",
-       "dtype: int64"
+       "    Unnamed: 0 Unnamed: 1    Unnamed: 2\n",
+       "0            0       year  All above 16\n",
+       "1            1       2023          10.5\n",
+       "2            2       2022            11\n",
+       "3            3       2021          12.6\n",
+       "4            4       2020          14.4\n",
+       "5            5       2019          15.5\n",
+       "6            6       2018          16.3\n",
+       "7            7       2017          16.4\n",
+       "8            8       2016          15.8\n",
+       "9            9       2015          17.9\n",
+       "10          10       2014          18.5\n",
+       "11          11       2013          18.6\n",
+       "12          12       2012          19.9\n",
+       "13          13       2011          19.1\n",
+       "14          14       2010          19.6"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_den_summed = df_den.select_dtypes(include=[np.number]).sum()\n",
-    "df_den_summed.head(15)"
+    "df_eng.head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "98aee16e",
+   "execution_count": 5,
+   "id": "112f5a78",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1975.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1977.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1979.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1980.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1981.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1982.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1983.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1986.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1999    18968\n",
-       "2000    16350\n",
-       "2001    18120\n",
-       "2002    16007\n",
-       "2003    16632\n",
-       "2004    16463\n",
-       "2005    17775\n",
-       "2006    17287\n",
-       "2007    16106\n",
-       "2008    15458\n",
-       "dtype: int64"
+       "    Unnamed: 0  Unnamed: 2  Unnamed: 3\n",
+       "0            2      1973.0        42.0\n",
+       "1            3      1974.0        41.0\n",
+       "2            4      1975.0        41.0\n",
+       "3            5      1976.0        39.0\n",
+       "4            6      1977.0        38.0\n",
+       "5            7      1978.0        38.0\n",
+       "6            8      1979.0        37.0\n",
+       "7            9      1980.0        36.0\n",
+       "8           10      1981.0        36.0\n",
+       "9           11      1982.0        36.0\n",
+       "10          12      1983.0        37.0\n",
+       "11          13      1984.0        37.0\n",
+       "12          14      1985.0        37.0\n",
+       "13          15      1986.0        36.0\n",
+       "14          16      1987.0        37.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_no_summed = df_no.select_dtypes(include=[np.number]).sum()\n",
-    "df_no_summed.head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "78c91b35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Combined (no NaN):\n",
-      "   Country   1999   2000   2001   2002   2003   2004   2005   2006   2007  \\\n",
-      "0  Denmark  16490  15229  17049  14980  16437  15316  16398  15918  16285   \n",
-      "1   Norway  18968  16350  18120  16007  16632  16463  17775  17287  16106   \n",
-      "\n",
-      "    2008  \n",
-      "0  13789  \n",
-      "1  15458  \n",
-      "\n",
-      "Long format data (after dropping NaN):\n",
-      "    Country  Year  Cases\n",
-      "0   Denmark  1999  16490\n",
-      "1    Norway  1999  18968\n",
-      "2   Denmark  2000  15229\n",
-      "3    Norway  2000  16350\n",
-      "4   Denmark  2001  17049\n",
-      "5    Norway  2001  18120\n",
-      "6   Denmark  2002  14980\n",
-      "7    Norway  2002  16007\n",
-      "8   Denmark  2003  16437\n",
-      "9    Norway  2003  16632\n",
-      "10  Denmark  2004  15316\n",
-      "11   Norway  2004  16463\n",
-      "12  Denmark  2005  16398\n",
-      "13   Norway  2005  17775\n",
-      "14  Denmark  2006  15918\n",
-      "15   Norway  2006  17287\n",
-      "16  Denmark  2007  16285\n",
-      "17   Norway  2007  16106\n",
-      "18  Denmark  2008  13789\n",
-      "19   Norway  2008  15458\n",
-      "\n",
-      "Final data for DiD regression:\n",
-      "    Country  Year  Cases  Post_2004  Norway  Treated\n",
-      "0   Denmark  1999  16490          0       0        0\n",
-      "1    Norway  1999  18968          0       1        0\n",
-      "2   Denmark  2000  15229          0       0        0\n",
-      "3    Norway  2000  16350          0       1        0\n",
-      "4   Denmark  2001  17049          0       0        0\n",
-      "5    Norway  2001  18120          0       1        0\n",
-      "6   Denmark  2002  14980          0       0        0\n",
-      "7    Norway  2002  16007          0       1        0\n",
-      "8   Denmark  2003  16437          0       0        0\n",
-      "9    Norway  2003  16632          0       1        0\n",
-      "10  Denmark  2004  15316          1       0        0\n",
-      "11   Norway  2004  16463          1       1        1\n",
-      "12  Denmark  2005  16398          1       0        0\n",
-      "13   Norway  2005  17775          1       1        1\n",
-      "14  Denmark  2006  15918          1       0        0\n",
-      "15   Norway  2006  17287          1       1        1\n",
-      "16  Denmark  2007  16285          1       0        0\n",
-      "17   Norway  2007  16106          1       1        1\n",
-      "18  Denmark  2008  13789          1       0        0\n",
-      "19   Norway  2008  15458          1       1        1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert summed series to DataFrames and add metadata\n",
-    "df_den_total = pd.DataFrame([df_den_summed]).reset_index(drop=True)\n",
-    "df_den_total.insert(0, 'Country', 'Denmark')\n",
-    "\n",
-    "df_no_total = pd.DataFrame([df_no_summed]).reset_index(drop=True)  \n",
-    "df_no_total.insert(0, 'Country', 'Norway')\n",
-    "\n",
-    "\n",
-    "# Force the column names to be strings and try again\n",
-    "df_den_total.columns = ['Country'] + [str(col) for col in df_den_total.columns[1:]]\n",
-    "df_no_total.columns = ['Country'] + [str(col) for col in df_no_total.columns[1:]]\n",
-    "\n",
-    "\n",
-    "# Now check common columns again\n",
-    "den_cols = set(df_den_total.columns) - {'Country'}\n",
-    "no_cols = set(df_no_total.columns) - {'Country'}\n",
-    "common_cols = sorted(den_cols.intersection(no_cols))\n",
-    "\n",
-    "# Reorder both DataFrames to have the same column structure\n",
-    "df_den_aligned = df_den_total[['Country'] + common_cols]\n",
-    "df_no_aligned = df_no_total[['Country'] + common_cols]\n",
-    "\n",
-    "# Now combine them\n",
-    "df_combined = pd.concat([df_den_aligned, df_no_aligned], ignore_index=True)\n",
-    "print(\"Combined (no NaN):\")\n",
-    "print(df_combined)\n",
-    "\n",
-    "\n",
-    "# Melt to long format for regression\n",
-    "df_long = df_combined.melt(id_vars=['Country'], var_name='Year', value_name='Cases')\n",
-    "\n",
-    "# Drop any rows with NaN values\n",
-    "df_long = df_long.dropna()\n",
-    "\n",
-    "print(\"\\nLong format data (after dropping NaN):\")\n",
-    "print(df_long.head(20))\n",
-    "\n",
-    "# Convert year to numeric and create policy variables\n",
-    "df_long['Year'] = pd.to_numeric(df_long['Year'])\n",
-    "df_long['Post_2004'] = (df_long['Year'] >= 2004).astype(int)\n",
-    "df_long['Norway'] = (df_long['Country'] == 'Norway').astype(int)\n",
-    "df_long['Treated'] = df_long['Norway'] * df_long['Post_2004']\n",
-    "\n",
-    "print(\"\\nFinal data for DiD regression:\")\n",
-    "print(df_long.head(20))"
+    "df_no.head(15)"
    ]
   },
   {
