--- a/graveyard/new_data.ipynb
+++ b/graveyard/new_data.ipynb
@@ -815,7 +815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data_science_venv",
    "language": "python",
    "name": "python3"
   },
@@ -829,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
